[Mac] Mirror profile switcher UI in RTL

BUG=723730

Review-Url: https://codereview.chromium.org/2901973002
Cr-Commit-Position: refs/heads/master@{#474399}

Former-commit-id: e91e520f7b2f426b860955d9be2694a28b353866